implement cache eviction methods and update cache configurations for various entities